.provarCaches/00D5f000005vwGkEAI/objects/rstk__somsach__c.object
<CustomObject>
    <description>somsach__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__somsach_somsac__r.rstk__externalid__c &amp;&apos;_&apos;&amp; TEXT(rstk__somsach_rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__somsach_somsac__r.Name &amp;&apos;-&apos;&amp; TEXT(rstk__somsach_rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__somsach_clause__c</fullName>
        <label>Clause Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__somsach_comment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__somsach_date__c</fullName>
        <label>Date of Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__somsach_msarev__c</fullName>
        <label>MSA Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__somsach_rev__c</fullName>
        <label>Clause Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__somsach_somsac__c</fullName>
        <label>MSA Clause</label>
        <referenceTo>rstk__somsac__c</referenceTo>
        <relationshipLabel>MSA Clause Change History</relationshipLabel>
        <relationshipName>somsachs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Template MSA Clause Change History</label>
    <listViews>
        <fullName>rstk__RS_Template_MSA_Clause_Change_History</fullName>
        <columns>NAME</columns>
        <columns>rstk__somsach_somsac__c</columns>
        <columns>rstk__somsach_msarev__c</columns>
        <columns>rstk__somsach_date__c</columns>
        <columns>rstk__somsach_clause__c</columns>
        <columns>rstk__somsach_rev__c</columns>
        <columns>rstk__somsach_comment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Template MSA Clause Change History</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MSA Clause Change History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template MSA Clause Change History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>